--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,7 +5,7 @@
     <title>Handlebars Demo</title>
 </head>
 <body>
-<div class="container">
+<div class="container" style="background-color: hotpink">
     {{{body}}}
 </div>
 </body>
