--- a/views/partials/laureate_form.hbs
+++ b/views/partials/laureate_form.hbs
@@ -1,4 +1,4 @@
-<form action="http://localhost:3000/laureates/" method="post">
+<form action="http://localhost:3000/laureates/" method="POST">
     {{>cat_dropdown}}
     <div class="input-group mb-3">
         <span class="input-group-text" id="inputGroup-sizing-default">Year</span>
