--- a/views/partials/cat_form.hbs
+++ b/views/partials/cat_form.hbs
@@ -1,6 +1,6 @@
 <form action="http://localhost:3000/category/laureates" method="GET">
     {{>cat_dropdown}}
-    <button type="submit" class="btn btn-primary mb-3">Valider</button>
+    <button type="submit" class="btn btn-danger mb-3">Valider</button>
 </form>
 <table>
     <h1>Current catégorie : {{category}}</h1>
