--- a/views/partials/laureate_form.hbs
+++ b/views/partials/laureate_form.hbs
@@ -19,5 +19,5 @@
         <span class="input-group-text" id="inputGroup-sizing-default">Motivation</span>
         <input type="text" class="form-control" name="motivation" id="motivation">
     </div>
-    <button class="btn btn-primary" type="submit">Submit form</button>
+    <button class="btn btn-danger" type="submit">Submit form</button>
 </form>
